Add navbar links to add task and view all tasks

--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -8,6 +8,8 @@
     <body>
     <div class="header">
         <a href="/">Home</a>
+        <a href="/tasks/add">Add task</a>
+        <a href="/tasks">All tasks</a>
         <span th:text="${buildInfo}"></span>
     </div>
         <div th:replace="${content}">
