--- a/src/main/resources/views/task-details.html
+++ b/src/main/resources/views/task-details.html
@@ -5,6 +5,12 @@
 )}" xmlns:th="http://www.thymeleaf.org">
     <body>
         <section>
+            <script type="text/javascript">
+                function showDeletePrompt() {
+                    document.getElementById("delete-prompt").style.display = "inline"
+                }
+            </script>
+
             <h1>Task Details</h1>
             <p>Name: <span th:text="${task.name}"></span></p>
             <p>Due date: <span th:text="${task.dueDate}"></span></p>
@@ -19,7 +25,16 @@
             <p>Created at: <span th:text="${task.createdTimestamp}"></span></p>
             <p>Updated at: <span th:text="${task.updatedTimestamp}"></span></p>
             <p>
-                <a th:href="@{/tasks/{id}/edit(id=${task.id})}">Edit task</a>
+                <form th:action="@{/tasks/{id}/edit(id=${task.id})}" method="get">
+                    <input type="submit" value="Edit task" />
+                </form>
+                <form action="#" th:action="@{/tasks/{id}/delete(id=${task.id})}" method="post">
+                    <input type="button" value="Delete task" onclick="showDeletePrompt()" />
+                    <span id="delete-prompt" style="display:none">
+                        <span>Are you sure?</span>
+                        <input type="submit" value="Yes!" />
+                    </span>
+                </form>
             </p>
         </section>
     </body>
