--- a/src/main/resources/views/fragments/task-fields.html
+++ b/src/main/resources/views/fragments/task-fields.html
@@ -82,7 +82,7 @@
       </div>
       <div th:if="${errors != null && !errors.classErrors.isEmpty()}">
         <div>Errors:</div>
-        <div th:each="error : ${errors.classErrors}" th:text="${error}" style="color: red;"></div>
+        <div th:each="error : ${errors.classErrors}" th:text="${error}" class="error"></div>
       </div>
 
       <script type="text/javascript">
