--- a/src/main/resources/views/task-details.html
+++ b/src/main/resources/views/task-details.html
@@ -5,13 +5,17 @@
 )}" xmlns:th="http://www.thymeleaf.org">
     <body>
         <section>
-            <script type="text/javascript">
-                function showDeletePrompt() {
-                    document.getElementById("delete-prompt").style.display = "inline"
-                }
-            </script>
-
             <h1>Task Details</h1>
+            <div>
+                <form th:replace="~{fragments/link-button :: link-button(@{/tasks/{id}/edit(id=${task.id})}, 'Edit task')}"></form>
+                <form action="#" th:action="@{/tasks/{id}/delete(id=${task.id})}" method="post" class="inline">
+                    <input type="button" value="Delete task" onclick="showDeletePrompt()" />
+                    <span id="delete-prompt" style="display:none">
+                        <span>Are you sure?</span>
+                        <input type="submit" value="Yes!" />
+                    </span>
+                </form>
+            </div>
             <div>Name: <span th:text="${task.name}"></span></div>
             <div>Due date: <span th:text="${task.dueDate}"></span></div>
             <div>Trigger type: <span th:text="${task.trigger.triggerType}"></span></div>
@@ -36,19 +40,23 @@
                 Day of month: <span th:text="${task.trigger.dayOfMonth}"></span>
             </div>
             <div>Autocomplete: <span th:text="${task.autocomplete}"></span></div>
-            <div>Description: <span th:text="${task.description}"></span></div>
             <div>Created at: <span th:text="${task.createdTimestamp}"></span></div>
             <div>Updated at: <span th:text="${task.updatedTimestamp}"></span></div>
             <div>
-                <form th:replace="~{fragments/link-button :: link-button(@{/tasks/{id}/edit(id=${task.id})}, 'Edit task')}"></form>
-                <form action="#" th:action="@{/tasks/{id}/delete(id=${task.id})}" method="post" class="inline">
-                    <input type="button" value="Delete task" onclick="showDeletePrompt()" />
-                    <span id="delete-prompt" style="display:none">
-                        <span>Are you sure?</span>
-                        <input type="submit" value="Yes!" />
-                    </span>
-                </form>
+                Description:
+                <div id="hidden-description" th:text="${task.description}" style="display: none;"></div>
+                <div id="markdown-description"></div>
             </div>
+
+            <script src="https://cdn.jsdelivr.net/npm/marked@11.0.0/lib/marked.umd.min.js"></script>
+            <script type="text/javascript">
+                function showDeletePrompt() {
+                    document.getElementById("delete-prompt").style.display = "inline"
+                }
+
+                const markdownSource = document.getElementById("hidden-description").innerHTML
+                document.getElementById("markdown-description").innerHTML = marked.parse(markdownSource)
+            </script>
         </section>
     </body>
 </html>
