Add task counts

--- a/src/main/resources/views/all-tasks.html
+++ b/src/main/resources/views/all-tasks.html
@@ -5,7 +5,7 @@
 )}" xmlns:th="http://www.thymeleaf.org">
   <body>
     <section>
-      <h1>All Tasks</h1>
+      <h1>All Tasks<span th:if="${!tasks.isEmpty()}" th:text="| (${tasks.size})|"></span></h1>
       <p th:if="${tasks.isEmpty()}">No tasks yet!</p>
       <block th:if="${!tasks.isEmpty()}">
         <div th:each="task : ${tasks}">
