Style header and footer

--- a/src/main/resources/views/fragments/field-errors.html
+++ b/src/main/resources/views/fragments/field-errors.html
@@ -3,7 +3,7 @@
     <body>
         <div th:fragment="field-errors(fieldName, errors)">
             <div th:if="${errors != null && errors.fieldErrors.containsKey(fieldName)}">
-                <div th:each="error : ${errors.fieldErrors[fieldName]}" th:text="${error}" class="error"></div>
+                <div th:each="error : ${errors.fieldErrors[fieldName]}" th:text="${error}" class="text-danger"></div>
             </div>
         </div>
     </body>
