--- a/src/main/resources/views/task-details.html
+++ b/src/main/resources/views/task-details.html
@@ -10,7 +10,7 @@
                 <form th:replace="~{fragments/link-button :: link-button(@{/tasks/{id}/edit(id=${task.id})}, 'Edit task')}"></form>
                 <form action="#" th:action="@{/tasks/{id}/delete(id=${task.id})}" method="post" class="inline" onsubmit="disableSubmitButtons()">
                     <input type="button" value="Delete task" onclick="showDeletePrompt()" />
-                    <span id="delete-prompt" style="display:none">
+                    <span id="delete-prompt" class="visually-hidden">
                         <span>Are you sure?</span>
                         <input th:replace="~{fragments/disabling-submit :: disabling-submit('Yes!')}" />
                     </span>
@@ -44,14 +44,14 @@
             <div>Updated at: <span th:text="${task.updatedTimestamp}"></span></div>
             <div>
                 Description:
-                <div id="hidden-description" th:text="${task.description}" style="display: none;"></div>
+                <div id="hidden-description" th:text="${task.description}" class="visually-hidden"></div>
                 <div id="markdown-description"></div>
             </div>
 
             <script src="https://cdn.jsdelivr.net/npm/marked@11.0.0/lib/marked.umd.min.js"></script>
             <script type="text/javascript">
                 function showDeletePrompt() {
-                    document.getElementById("delete-prompt").style.display = "inline"
+                    document.getElementById("delete-prompt").classList.remove("visually-hidden")
                 }
 
                 const markdownSource = document.getElementById("hidden-description").innerHTML
