--- a/src/main/resources/views/home.html
+++ b/src/main/resources/views/home.html
@@ -18,7 +18,7 @@
 
                             <div class="w-100">
                                 <div th:text="${task.name}"></div>
-                                <div class="text-secondary" th:text="|${task.daysOverdue} days overdue|"></div>
+                                <div class="text-secondary" th:text="${task.overdueText}"></div>
                             </div>
 
                             <form action="#"
