Use nice buttons on the home page

--- a/src/main/resources/views/fragments/disabling-submit.html
+++ b/src/main/resources/views/fragments/disabling-submit.html
@@ -5,7 +5,7 @@
                 th:fragment="disabling-submit(text)"
                 type="submit"
                 th:value="${text}"
-                class="disabling-submit"
+                class="disabling-submit btn btn-outline-primary"
         />
     </body>
 </html>
