--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -13,10 +13,20 @@
                 for (i = 0; i < elements.length; i++) {
                     elements[i].disabled = true
                 }
+                document.getElementById("loading-modal").classList.remove("visually-hidden")
             }
         </script>
     </head>
     <body>
+        <div id="loading-modal"
+             class="visually-hidden position-fixed d-flex justify-content-center align-items-center h-100 w-100 bg-secondary bg-opacity-50"
+             style="z-index: 5000000">
+            <div class="d-flex flex-column align-items-center">
+                <div class="spinner-border"></div>
+                <div>Loading...</div>
+            </div>
+        </div>
+
         <div class="container">
             <header class="d-flex justify-content-center py-3">
                 <ul class="nav nav-pills">
