--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -40,7 +40,7 @@
             <p>Layout content</p>
         </div>
         <div class="container">
-            <footer class="d-flex justify-content-between align-items-center py-3 my-4 border-top text-muted">
+            <footer class="d-flex justify-content-between align-items-center py-3 my-4 border-top text-muted text-center">
                 <p class="col" th:text="|version: ${appVersion}|"></p>
                 <p class="col" th:text="|running on: ${appEnvironment}|"></p>
                 <p class="col" th:text="|database: ${databaseEnvironment}|"></p>
