--- a/src/main/resources/views/task-details.html
+++ b/src/main/resources/views/task-details.html
@@ -5,58 +5,67 @@
 )}" xmlns:th="http://www.thymeleaf.org">
     <body>
         <section>
-            <h1>Task Details</h1>
-            <div>
-                <form th:replace="~{fragments/link-button :: link-button(@{/tasks/{id}/edit(id=${task.id})}, 'Edit task')}"></form>
-                <form action="#" th:action="@{/tasks/{id}/delete(id=${task.id})}" method="post" class="inline" onsubmit="disableSubmitButtons()">
-                    <input type="button" value="Delete task" onclick="showDeletePrompt()" />
-                    <span id="delete-prompt" class="visually-hidden">
-                        <span>Are you sure?</span>
-                        <input th:replace="~{fragments/disabling-submit :: disabling-submit('Yes!')}" />
-                    </span>
-                </form>
-            </div>
-            <div>Name: <span th:text="${task.name}"></span></div>
-            <div>Due date: <span th:text="${task.dueDate}"></span></div>
-            <div>Trigger type: <span th:text="${task.trigger.triggerType}"></span></div>
-            <div th:if="${task.trigger.triggerType.name()} == 'FIXED_DELAY'">
-                Days between: <span th:text="${task.trigger.daysBetween}"></span>
-            </div>
-            <div th:if="${task.trigger.triggerType.name()} == 'WEEKLY'">
-                Day of week: <span th:text="${task.trigger.dayOfWeek}"></span>
-            </div>
-            <div th:if="${task.trigger.triggerType.name()} == 'MONTHLY'">
-                <div>
-                    Day of month: <span th:text="${task.trigger.dayOfMonth}"></span>
-                    <div th:if="${task.trigger.dayOfMonth} > 28">
-                        Note: For months with more than <span th:text="${task.trigger.dayOfMonth}"></span> days the task will be due on the last day of the month
-                    </div>
+            <div class="container">
+                <h1 th:text="${task.name}">Task Details</h1>
+                <div class="d-flex gap-4 pb-2">
+                    <a th:href="@{/tasks/{id}/edit(id=${task.id})}" class="btn btn-outline-primary pr-4">Edit</a>
+                    <form action="#" th:action="@{/tasks/{id}/delete(id=${task.id})}" method="post" onsubmit="disableSubmitButtons()">
+                        <input class="btn btn-outline-primary" type="button" value="Delete" onclick="showDeletePrompt()" />
+                        <span id="delete-prompt" class="visually-hidden">
+                            <span>Are you sure?</span>
+                            <input th:replace="~{fragments/disabling-submit :: disabling-submit('Yes!')}" />
+                        </span>
+                    </form>
                 </div>
-            </div>
-            <div th:if="${task.trigger.triggerType.name()} == 'YEARLY'">
-                Month: <span th:text="${task.trigger.monthOfYear}"></span>
-            </div>
-            <div th:if="${task.trigger.triggerType.name()} == 'YEARLY'">
-                Day of month: <span th:text="${task.trigger.dayOfMonth}"></span>
-            </div>
-            <div>Autocomplete: <span th:text="${task.autocomplete}"></span></div>
-            <div>Created at: <span th:text="${task.createdTimestamp}"></span></div>
-            <div>Updated at: <span th:text="${task.updatedTimestamp}"></span></div>
-            <div>
-                Description:
-                <div id="hidden-description" th:text="${task.description}" class="visually-hidden"></div>
-                <div id="markdown-description"></div>
-            </div>
 
-            <script src="https://cdn.jsdelivr.net/npm/marked@11.0.0/lib/marked.umd.min.js"></script>
-            <script type="text/javascript">
-                function showDeletePrompt() {
-                    document.getElementById("delete-prompt").classList.remove("visually-hidden")
-                }
+                <div class="list-group">
 
-                const markdownSource = document.getElementById("hidden-description").innerHTML
-                document.getElementById("markdown-description").innerHTML = marked.parse(markdownSource)
-            </script>
+                    <div class="list-group-item">
+                        <div class="text-secondary">Next due date</div>
+                        <div th:if="${task.dueDate != null}" th:text="${task.dueDate}"></div>
+                        <div th:if="${task.dueDate == null}">Never</div>
+                    </div>
+
+                    <div class="list-group-item">
+                        <div class="text-secondary">Trigger</div>
+                        <div th:text="${task.trigger.friendlyString}"></div>
+                        <div th:replace="~{fragments/note :: note(${task.trigger.note})}"></div>
+                    </div>
+
+                    <div class="list-group-item">
+                        <div class="text-secondary">Autocomplete</div>
+                        <div th:text="${task.autocomplete ? 'Yes' : 'No'}"></div>
+                    </div>
+
+                    <div class="list-group-item">
+                        <div class="text-secondary">Created</div>
+                        <div th:text="${task.createdTimestamp}"></div>
+                    </div>
+
+                    <div class="list-group-item">
+                        <div class="text-secondary">Updated</div>
+                        <div th:text="${task.updatedTimestamp}"></div>
+                    </div>
+
+                    <div class="list-group-item">
+                        <div class="text-secondary">Description</div>
+                        <div id="hidden-description" th:text="${task.description}" class="visually-hidden"></div>
+                        <div th:if="${task.description != null && !task.description.isBlank()}" id="markdown-description"></div>
+                        <div th:if="${task.description == null || task.description.isBlank()}">None</div>
+                    </div>
+
+                </div>
+
+                <script src="https://cdn.jsdelivr.net/npm/marked@11.0.0/lib/marked.umd.min.js"></script>
+                <script type="text/javascript">
+                    function showDeletePrompt() {
+                        document.getElementById("delete-prompt").classList.remove("visually-hidden")
+                    }
+
+                    const markdownSource = document.getElementById("hidden-description").innerHTML
+                    document.getElementById("markdown-description").innerHTML = marked.parse(markdownSource)
+                </script>
+            </div>
         </section>
     </body>
 </html>
